@@ -4,7 +4,7 @@ Types::Const - Types that coerce references to read-only
 
 # VERSION
 
-version v0.1.2
+version v0.2.0
 
 # SYNOPSIS
 
