@@ -1,8 +1,11 @@
 requires "Const::Fast" => "0";
+requires "List::Util" => "1.33";
+requires "Ref::Util" => "0";
 requires "Type::Library" => "0";
 requires "Type::Tiny" => "0";
 requires "Type::Utils" => "0";
 requires "Types::Standard" => "0";
+requires "Types::TypeTiny" => "0";
 requires "namespace::autoclean" => "0.28";
 requires "perl" => "v5.8.0";
 recommends "Ref::Util::XS" => "0";
