@@ -1,15 +1,21 @@
 Revision history for {{ $dist->name }}:
 
 {{$NEXT}}
+  [Enhancements]
+  - Add support for parameterized types.
+
   [Bug Fixes]
-  - Declare ConstHashRef type.
+  - Added missing declaration of the ConstHashRef type.
 
   [Other]
   - Updated module metadata.
 
+
 v0.1.1    2018-11-07 22:32:09+00:00 Europe/London
   [Bug Fixes]
   - Clean namespace.
+
+  - Constraint checks are now recursive.
 
   [Other]
   - Removed unnecessary prerequisite.
